device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__line_to_hashmap_mount.snap
---
source: mount-emitter/src/lib.rs
expression: map_to_sorted_vec(line_to_hashmap(line).unwrap())
---
[
    (
        "ACTION",
        "mount",
    ),
    (
        "FSTYPE",
        "ext4",
    ),
    (
        "OLD-OPTIONS",
        "",
    ),
    (
        "OLD-TARGET",
        "",
    ),
    (
        "OPTIONS",
        "rw,relatime,data=ordered",
    ),
    (
        "SOURCE",
        "/dev/sde1",
    ),
    (
        "TARGET",
        "/mnt/part1",
    ),
]
