device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__line_to_hashmap_swap.snap
---
source: mount-emitter/src/lib.rs
expression: map_to_sorted_vec(line_to_hashmap(line).unwrap())
---
[
    (
        "FSTYPE",
        "swap",
    ),
    (
        "OPTIONS",
        "defaults",
    ),
    (
        "SOURCE",
        "/dev/mapper/centos-swap",
    ),
    (
        "TARGET",
        "swap",
    ),
]
