device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__poll_move.snap
---
source: mount-emitter/src/lib.rs
expression: line_to_command(line).unwrap()
---
MoveMount(
    MountPoint(
        "/mnt/part1a",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "rw,relatime,data=ordered",
    ),
    MountPoint(
        "/mnt/part1",
    ),
)
