device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__poll_remount.snap
---
source: mount-emitter/src/lib.rs
expression: line_to_command(line).unwrap()
---
ReplaceMount(
    MountPoint(
        "/mnt/part1",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "ro,relatime,data=ordered",
    ),
    MountOpts(
        "rw,data=ordered",
    ),
)
