device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__poll_umount.snap
---
source: mount-emitter/src/lib.rs
expression: line_to_command(line).unwrap()
---
RemoveMount(
    MountPoint(
        "/testPool4",
    ),
    DevicePath(
        "testPool4",
    ),
    FsType(
        "zfs",
    ),
    MountOpts(
        "rw,xattr,noacl",
    ),
)
