device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__swap.snap
---
source: mount-emitter/src/lib.rs
expression: line_to_command(line).unwrap()
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/centos-swap",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
