device-scanner/mount-emitter/src/snapshots/mount_emitter__tests__swap_extra.snap
---
source: mount-emitter/src/lib.rs
expression: line_to_command(line).unwrap()
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/VolGroup00-LogVol01",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
